# BrandonBot

./: .gitignore  .replit  .replit-ssh-setup.sh  COMMERCIALAI_MIGRATION.md  GIT_AND_DEPLOYMENT_GUIDE.md  README.md  SELF_HOSTING.md  brandonbot_conversations.csv  developer_guide.md  download_phi3_model.py  evaluation_prompt.txt  full_test.py  pyproject.toml  replit.md  requirements.txt  smoke_test.sh
attached_assets/: Pasted--Hi-Brandon-What-is-Brandon-s-family-like-How-and-why-did-you-come-to-Arizo-1763528966668_1763528966669.txt  Pasted--Hi-Brandon-What-is-Brandon-s-family-like-How-and-why-did-you-come-to-Arizo-1763528989649_1763528989650.txt  Pasted--OpenAI-Migration-Checklist-Purpose-Documents-all-Phi-3-specific-workarounds-that-c-1763825365827_1763825365828.txt  Pasted--project-name-repl-nix-workspace-version-0-1-0-description-Add-your-description-here-re-1763704614920_1763704614923.txt  Pasted--workspace-cd-backend-uvicorn-main-app-host-0-0-0-0-port-5000-uvicorn-command-not-installed-1763704103274_1763704103274.txt  Pasted--workspace-git-fsck-full-Checking-ref-database-100-1-1-done-Checking-object-directories--1763670199386_1763670199388.txt  Pasted-I-am-a-Software-Service-and-IP-provider-My-goal-is-to-deliver-AI-products-to-SMB-My-first-customer-1763167692510_1763167692510.txt  Pasted-PS-C-Users-jdstr-OneDrive-Cana-sowerscongress-BrandonBot-start-brandonbot-ps1-Starting-BrandonB-1763507242186_1763507242187.txt  Pasted-Prompts-The-first-prompts-I-propose-are-Hi-Brandon-What-is-Brandon-s-family-like--1763602145858_1763602145859.txt  content-1763580796811.md  (+1 more)
(+53 files in other folders)
