[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "BrandonBot"
authors = ["Jayson Strayer <jdstrayer.js@gmail.com>"]

[tool.poetry.dependencies]
duckduckgo-search = ">=8.1.1"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.9"  # Specify the compatible Python version here